style.css
html {
    font-family: 'Open Sans', sans-serif;
    background: #414141;
    color: white;
}

#dialogoverlay{
	display: none;
	opacity: .1;
	position: fixed;
	top: 0px;
	left: 0px;
	background: #FFF;
	width: 100%;
	z-index: 10;
}
#dialogbox{
    justify-content: center;
	display: none;
    position: fixed;
	width: 100%;
	z-index: 10;
}
#dialogbox > div{ background:#FFF; margin:8px; }
#dialogbox > div > #dialogboxhead{ cursor: default; background: #313131; font-size:19px; padding:10px; color:white; }
#dialogbox > div > #dialogboxbody{ cursor: default; background: #414141; font-size:15px; padding:20px; color:white; }
#dialogbox > div > #dialogboxfoot{ cursor: default; background: #414141; padding:10px; text-align:center; }

#no {
    margin-left: 5px;
}

#yes {
    margin-right: 5px;
}

.dialogBtns {
    border-radius: 7.5px;
    padding: 7.5px;
    width: 25%;
    border: solid #525252 1px;
    text-align: center;
    background: none;
    transition: 350ms;
    color: white;
    background: #525252;
}

.dialogBtns:hover {
    border: solid 1px #313131;
    cursor: pointer;
}

header {
    font-size: 16pt;
    color: white;
    cursor: default;
    padding: 15px;
    background-color: #313131;
    font-weight: bold;
    position: fixed;
    top: 0;
    width: 100%;
    text-align: center;
    transition: 350ms;
}

body {
    margin: 0;
    min-height: 100%;
}

#container {
    margin-top: 80px;
    margin-left: 20px;
    margin-right: 20px;
}

#inputDiv {
    display: flex;
    color: white;
}

#movieInput {
    width: 80%;
    padding: 15px;
    border: 0;
    border-radius: 7.5px 0 0 7.5px;
    background: #525252;
    color: white;
}

#movieList {
    list-style-type: none;
    padding: 0;
}

#movieList:empty {
    border: none;
}

.movie {
    padding:.5em;
    cursor: pointer;
    transition: 350ms;
    background: #525252;
    border: solid #525252 1px;
}

.movie:hover {
    border: solid 1px #313131;
}

.movie:first-of-type {
    border-radius: 7.5px 7.5px 0 0;
}

.movie:last-of-type {
    border-radius: 0 0 7.5px 7.5px;
}

.movie:only-child {
    border-radius: 7.5px 7.5px 7.5px 7.5px;
}

#alertDiv {
    display: none;
}

#alertList {
    margin-top: 15px;
    list-style-type: none;
    padding: 0;
}

#alertList:empty {
    border: none;
}

.alertBox {
    padding:.5em;
    cursor: pointer;
    transition: 350ms;
    background: #313131;
    border: solid #313131 1px;
    cursor: default;
    transition: 350ms;
    animation: fade 0.4s ease;
}

.alertBox:hover {
    border: solid #525252 1px;
}

.alertBox:first-of-type {
    border-radius: 7.5px 7.5px 0 0;
}

.alertBox:last-of-type {
    border-radius: 0 0 7.5px 7.5px;
}

.alertBox:only-child {
    border-radius: 7.5px 7.5px 7.5px 7.5px;
}

#checked {
    border-left: 10px solid #212121;
}

#deleteBtn {
    float: right;
    cursor: pointer;
    padding-right: 5px;
    transition: 350ms;
}


#deleteBtn:hover {
    cursor: pointer;
    color: #CA3E47;
    transform: scale(1.25);
}

#clearBtn {
    border-radius: 0 7.5px 7.5px 0;
    border-width: 1px 1px 1px 0.5px;
}

#addBtn {
    border-width: 1px 0.5px 1px 0.5px;
}

.inputBtns {
    float: right;
    width: 10%;
    border: solid #525252 0.5px;
    text-align: center;
    background: none;
    transition: 350ms;
    color: white;
    background: #525252;
}

.inputBtns:hover {
    border: solid 1px #313131;
    cursor: pointer;
}

footer {
    position: relative;
    right: 0;
    bottom: 0;
    left: 0;
    text-align: center;
    font-size: 10pt;
}

@keyframes fade {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

